syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "Uuid.proto";

message ProfileFull {
  int64 user_id = 1;
  Uuid version = 2;
  string user_name = 3;
  string display_name = 4;
  string avatar_url = 5;
  string phone = 6;
  string email = 7;
}
